[package]
name = "frequency_modulation"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
[build]
rustflags = ["-Z", "threads=8","-C", "target-cpu=native"]
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
[workspace]
member=["fm-core"]
members = ["gui_test"]
# [build-dependencies]
# cc = "1.1.31"

[dependencies]

# rand = "0.8.5"
# rand_distr = "0.4.3"
# rand_mt = "4.2.2"
# rubato = "0.16.0"
# libsoxr = {git="https://github.com/PARA-DISO/libsoxr-rs.git", branch="include-sys"}
# sfmt = "0.7.0"

fm-core={path = "fm-core"}
# VST
nih_plug={git="https://github.com/robbert-vdh/nih-plug"}
simple-logging = "2.0.2"
log = "0.4.22"
parking_lot = "0.12"
# simplelog = "0.12.2"
# nih_plug_vizia = { git="https://github.com/robbert-vdh/nih-plug" }
# atomic_float = "1.1.0"
# strum = {version="0.26.3", features=["derive"]}
# strum_macros = "0.26.2"
# rand_mt = "4.2.2"
# easyfft = "0.4.1"
# qd = {git="https://github.com/Barandis/qd"}
