[package]
name = "frequency_modulation"
version = "0.1.0"
edition = "2021"
[lib]
name="frequency_modulation"
path="src/lib.rs"
crate-type = ["cdylib"]
[[bin]]
name="fm_sim"
path="src/main.rs"
[build]
rustflags = ["-Z", "threads=8","-C", "target-cpu=native"]
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
[workspace]
member=["fm-core"]
members = [ "buffer","gui_test"]
# [build-dependencies]
# cc = "1.1.31"

[dependencies]
fm-core = {path = "fm-core"}
buffer = {path="buffer"}
# VST
nih_plug={git="https://github.com/robbert-vdh/nih-plug"}
# simple-logging = "2.0.2"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
hound = "3.5.1"
