[package]
name = "fm-core"
version = "0.1.0"
edition = "2021"
# [lib]
# crate-type=["cdylib"]
[build]
rustflags = ["-Z", "threads=8","-C", "target-cpu=native"]
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
[build-dependencies]
cc = "1.1.31"
[dependencies]
libsoxr = {git="https://github.com/PARA-DISO/libsoxr-rs.git", branch="include-sys"}