[package]
name = "gui_test"
version = "0.1.0"
edition = "2021"
[profile.release]
lto = "fat"
codegen-units = 1
[dependencies]
iced = { version = "0.12.1", features = ["canvas","tokio"] }
plotters = {version = "0.3.7",default_features = false, features = [
    "chrono",
    "area_series",
    "line_series",
    "point_series",
] }
spectrum-analyzer = "1.5.0"
plotters-iced = "0.10.0"
fm-core={path = "../fm-core"}